[project]
name = "ai-agent"
version = "1.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "integration: 需要外部服务（MongoDB等）的集成测试",
    "slow: 耗时较长的测试",
    "unit: 纯单元测试，无外部依赖",
    "pbt: 属性测试（Property-Based Testing）",
    "e2e: 端到端测试",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agent", "dao", "util", "entity", "connector"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/temp/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | logs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["logs/*", ".venv/*", "__pycache__/*"]

[tool.autopep8]
max_line_length = 88
ignore = ["E501", "W503"]